refactor: updated read me