@@ -3,23 +3,17 @@
 How to compile ANTLR grammar file
 
 ```
-java -jar lib/antlr-4.9-complete.jar -package parser -o parser grammar/PSC.g4
+'compantlr' in TERMINAL
 ```
 
 How to compile ANTLR generated files
 
 ```
-javac --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls -cp ".;lib/richtextfx-fat-0.10.5.jar;lib/antlr-4.9-complete.jar" parser/*.java
+'compmvc' in TERMINAL
 ```
 
-How to compile all files
+How to run Main
 
 ```
-javac --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls -cp ".;lib/richtextfx-fat-0.10.5.jar;lib/antlr-4.9-complete.jar"  *.java
-```
-
-How to run frontend
-
-```
-java --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.controls -cp ".;lib/richtextfx-fat-0.10.5.jar;lib/antlr-4.9-complete.jar" App
+'run' in TERMINAL
 ```
